# llm_studio

./: .dockerignore  .env.example  .gitattributes  .gitignore  .gitleaks.toml  Dockerfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
app/: main.py
app/api/: auth_routes.py  dependencies.py  routes.py  streaming.py
app/core/: config.py  constants.py  email.py  exceptions.py  logging.py  ratelimit.py  security.py
app/database/: engine.py  models.py  repository.py  sqlite.py
app/llm/: client.py  document_loader.py  tokenizer.py
app/llm/prompts/: __init__.py
app/llm/providers/: glm.py  ollama.py  openai.py
app/schemas/: auth.py  chat.py  common.py  config.py
app/services/: chat_service.py  document_service.py  history_service.py  quota_service.py
app/static/: site.webmanifest
app/static/css/: styles.css
app/static/js/: app.js
app/templates/: index.html
app/utils/: file_utils.py  helpers.py  validators.py
archive/: README.md
archive/desktop/: build_desktop.py  desktop.py  make_desktop.bat  set_key.py
archive/docker/: .dockerignore  Dockerfile  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  PROJECT_OVERVIEW.md
scripts/: deploy_space.py  deploy_space_rebuild.py  run.bat  run_local.bat
tests/: conftest.py
tests/api/: test_routes.py
tests/core/: test_ratelimit.py
tests/database/: test_repository.py
tests/llm/: test_client.py
