[project]
name = "glm-studio"
version = "1.0.0"
description = "Local AI chat app (cloud + local models) — FastAPI + vanilla JS"
requires-python = ">=3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [".venv", "build", "dist", "archive"]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]   # long lines are fine in this project

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F811"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ['archive', '\.venv', 'build', 'dist', 'tests']
